chore: Remove unused app preview image.

--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@
         <div class="step-card">
           <div class="step-icon"><i data-lucide="activity"></i></div>
           <h3>2. Monitor</h3>
-          <p>Our "Watchdog" engine scans your portfolio 24/7 for drawdown,
+          <p>Our "Sentinel" engine scans your portfolio 24/7 for drawdown,
             volatility,
             and drift.</p>
         </div>
@@ -1082,7 +1082,8 @@
   <section class="agitation">
     <div class="container">
       <div class="agitation-inner"><i data-lucide="trending-down" class="agitation-arrow"></i>
-        <h2>Your strategy works. <span class=" red">Your psychology doesn't.</span> </h2>
+        <h2>Your strategy works.</h2>
+        <h2> <span class=" red">Your psychology doesn't.</span> </h2>
         <p>The market doesn't wait for you to wake up. Without automated stops, you are one bad news cycle
           away from a <span class="stat">-40% drawdown</span>.
         </p>
