fix: update Sentinel Engine text presentation

--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@
         <div class="step-card">
           <div class="step-icon"><i data-lucide="activity"></i></div>
           <h3>2. Monitor</h3>
-          <p>Our "Sentinel" engine scans your portfolio 24/7 for drawdown,
+          <p>Our Sentinel Engine scans your portfolio 24/7 for drawdown,
             volatility,
             and drift.</p>
         </div>
