--- a/index.html
+++ b/index.html
@@ -866,14 +866,14 @@
         gap: 32px !important;
       }
 
-      .metrics-grid > div {
+      .metrics-grid>div {
         border-left: none !important;
         padding-left: 0 !important;
         padding-top: 32px;
         border-top: 1px solid var(--border-glass);
       }
 
-      .metrics-grid > div:first-child {
+      .metrics-grid>div:first-child {
         border-top: none;
         padding-top: 0;
       }
@@ -888,7 +888,7 @@
         gap: 40px !important;
       }
 
-      .cta-grid > div {
+      .cta-grid>div {
         text-align: center !important;
       }
 
@@ -992,6 +992,187 @@
       margin-inline: auto;
       opacity: 0.6;
     }
+
+    /* Live PnL Widget */
+    .live-dashboard-widget {
+      position: absolute;
+      top: 40px;
+      right: -40px;
+      background: rgba(19, 27, 44, 0.9);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
+      border: 1px solid rgba(56, 189, 248, 0.3);
+      border-radius: 16px;
+      padding: 24px;
+      box-shadow:
+        0 20px 40px -10px rgba(0, 0, 0, 0.5),
+        0 0 20px rgba(56, 189, 248, 0.1);
+      width: 320px;
+      z-index: 10;
+      animation: float 6s ease-in-out infinite;
+    }
+
+    @keyframes float {
+
+      0%,
+      100% {
+        transform: translateY(0);
+      }
+
+      50% {
+        transform: translateY(-10px);
+      }
+    }
+
+    .widget-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+      border-bottom: 1px solid var(--border-color);
+      padding-bottom: 12px;
+    }
+
+    .widget-title {
+      font-size: 0.75rem;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      color: var(--text-muted);
+      font-weight: 700;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .live-value {
+      font-family: 'JetBrains Mono', monospace;
+      font-size: 1.75rem;
+      font-weight: 700;
+      color: var(--text-primary);
+      font-variant-numeric: tabular-nums;
+      margin-bottom: 4px;
+      transition: color 0.3s ease;
+      display: inline-block;
+      padding: 2px 8px;
+      /* Added padding for background flash */
+      margin-left: -8px;
+      /* Offset the padding to keep alignment */
+      border-radius: 6px;
+    }
+
+    .live-pnl {
+      font-size: 0.85rem;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .text-green {
+      color: var(--accent-green);
+    }
+
+    .text-red {
+      color: var(--accent-red);
+    }
+
+    .exposure-bar {
+      height: 4px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 2px;
+      margin-top: 16px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .exposure-fill {
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      width: 65%;
+      /* Simulated exposure */
+      background: var(--accent-blue);
+      border-radius: 2px;
+    }
+
+    .exposure-glow {
+      position: absolute;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      width: 4px;
+      background: #fff;
+      box-shadow: 0 0 10px #fff;
+      animation: pulse-bar 2s infinite;
+    }
+
+    @keyframes pulse-bar {
+      0% {
+        opacity: 0.5;
+      }
+
+      50% {
+        opacity: 1;
+      }
+
+      100% {
+        opacity: 0.5;
+      }
+    }
+
+    .data-flash {
+      animation: flash-bg 0.6s cubic-bezier(0, 0, 0.2, 1);
+    }
+
+    @keyframes flash-bg {
+      0% {
+        background-color: rgba(16, 185, 129, 0.2);
+      }
+
+      100% {
+        background-color: transparent;
+      }
+    }
+
+    /* Range Slider Styling */
+    .neon-slider {
+      -webkit-appearance: none;
+      width: 100%;
+      height: 6px;
+      background: var(--bg-card-hover);
+      border-radius: 5px;
+      outline: none;
+      border: 1px solid var(--border-glass);
+    }
+
+    .neon-slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      background: var(--accent-red);
+      cursor: pointer;
+      box-shadow: 0 0 15px rgba(239, 68, 68, 0.5);
+      border: 2px solid #fff;
+      transition: all 0.15s ease;
+    }
+
+    .neon-slider::-webkit-slider-thumb:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 25px rgba(239, 68, 68, 0.8);
+    }
+
+    .neon-slider::-moz-range-thumb {
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      background: var(--accent-red);
+      cursor: pointer;
+      box-shadow: 0 0 15px rgba(239, 68, 68, 0.5);
+      border: 2px solid #fff;
+    }
   </style>
 </head>
 
@@ -1053,6 +1234,43 @@
           </div>
         </div>
         <div class="hero-visual">
+          <!-- Live PnL Widget -->
+          <div class="live-dashboard-widget">
+            <div class="widget-header">
+              <span class="widget-title">
+                <span class="status-dot">
+                  <span class="status-dot-ping"
+                    style="background: var(--accent-green); animation-duration: 1.5s;"></span>
+                  <span class="status-dot-core" style="background: var(--accent-green);"></span>
+                </span>
+                System Status: Active
+              </span>
+              <i data-lucide="activity" style="width: 16px; height: 16px; color: var(--accent-blue);"></i>
+            </div>
+
+            <div style="margin-bottom: 8px;">
+              <div style="font-size: 0.75rem; color: var(--text-muted); margin-bottom: 4px;">Total Equity</div>
+              <div id="live-value-display" class="live-value">$388,752.65</div>
+            </div>
+
+            <div class="live-pnl">
+              <span>Today:</span>
+              <span id="live-pnl-display" class="text-green">+0.33% (+$1,245.12)</span>
+            </div>
+
+            <div style="margin-top: 20px;">
+              <div
+                style="display: flex; justify-content: space-between; font-size: 0.7rem; color: var(--text-muted); margin-bottom: 6px;">
+                <span>Net Exposure</span>
+                <span>65%</span>
+              </div>
+              <div class="exposure-bar">
+                <div class="exposure-fill">
+                  <div class="exposure-glow"></div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="app-preview-glow"></div>
           <img src="hero_dashboard_updated_1764783197194.png" alt="Dashboard Preview" class="app-preview"
             onerror="this.src='https://images.unsplash.com/photo-1611974714658-9426f04d7328?auto=format&fit=crop&q=80&w=1200'">
@@ -1065,7 +1283,8 @@
   <div
     style="border-top: 1px solid var(--border-glass); border-bottom: 1px solid var(--border-glass); background: rgba(19, 27, 44, 0.3); backdrop-filter: blur(12px);">
     <div class="container" style="padding-top: 48px; padding-bottom: 48px;">
-      <div class="metrics-grid" style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 48px; text-align: center; max-width: 800px; margin: 0 auto;">
+      <div class="metrics-grid"
+        style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 48px; text-align: center; max-width: 800px; margin: 0 auto;">
         <div>
           <div
             style="font-size: 2.5rem; font-weight: 700; font-family: 'JetBrains Mono', monospace; color: var(--text-primary); margin-bottom: 4px;">
@@ -1120,6 +1339,13 @@
               <stop offset="0%" stop-color="var(--accent-red)" stop-opacity="0.1" />
               <stop offset="100%" stop-color="var(--accent-red)" stop-opacity="0" />
             </linearGradient>
+            <filter id="glow-line" x="-20%" y="-20%" width="140%" height="140%">
+              <feGaussianBlur stdDeviation="2" result="coloredBlur" />
+              <feMerge>
+                <feMergeNode in="coloredBlur" />
+                <feMergeNode in="SourceGraphic" />
+              </feMerge>
+            </filter>
           </defs>
 
           <!-- Grid lines -->
@@ -1136,26 +1362,39 @@
             <text x="5" y="245">-40%</text>
           </g>
 
-          <!-- Unprotected Strategy (Red) -->
-          <path d="M0,150 L100,140 L200,160 L300,130 L350,220 L450,280 L550,310 L650,320 L800,330" fill="none"
-            stroke="var(--accent-red)" stroke-width="3" />
-          <path d="M0,150 L100,140 L200,160 L300,130 L350,220 L450,280 L550,310 L650,320 L800,330 L800,350 L0,350 Z"
-            fill="url(#redArea)" />
+          <!-- Dynamic Paths -->
+          <path id="crash-area-unprotected" d="" fill="url(#redArea)" />
+          <path id="crash-line-unprotected" d="" fill="none" stroke="var(--accent-red)" stroke-width="3" />
 
-          <!-- Protected Strategy (Green) -->
-          <path d="M0,150 L100,140 L200,160 L300,130 L310,145 L800,145" fill="none" stroke="var(--accent-green)"
-            stroke-width="4" stroke-linecap="round" />
-          <path d="M0,150 L100,140 L200,160 L300,130 L310,145 L800,145 L800,350 L0,350 Z" fill="url(#greenArea)" />
+          <path id="crash-area-protected" d="" fill="url(#greenArea)" />
+          <path id="crash-line-protected" d="" fill="none" stroke="var(--accent-green)" stroke-width="4"
+            stroke-linecap="round" filter="url(#glow-line)" />
 
-          <!-- Callout -->
-          <g transform="translate(310, 130)">
-            <circle r="6" fill="var(--accent-green)" />
-            <rect x="10" y="-35" width="120" height="30" rx="4" fill="var(--bg-primary)" stroke="var(--accent-green)"
-              stroke-width="1" />
-            <text x="70" y="-15" text-anchor="middle" fill="var(--accent-green)" font-weight="800" font-size="10">WENT
-              TO CASH</text>
+          <!-- Dynamic Callout -->
+          <g id="crash-callout" visibility="hidden">
+            <rect x="0" y="-30" width="130" height="26" rx="4" fill="var(--accent-green)" />
+            <text x="65" y="-14" text-anchor="middle" fill="#0B0F19" font-weight="800" font-size="10"
+              font-family="Inter" letter-spacing="0.05em">AIRBAG DEPLOYED</text>
+            <circle cx="0" cy="0" r="4" fill="var(--accent-green)" />
           </g>
         </svg>
+
+        <!-- Slider Controls -->
+        <div style="max-width: 500px; margin: 0 auto; margin-top: 32px;">
+          <div
+            style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px; font-family: 'JetBrains Mono', monospace; font-size: 0.9rem;">
+            <div style="color: var(--text-secondary);">VOLATILITY</div>
+            <div style="color: var(--accent-red);" id="volatility-label">50%</div>
+          </div>
+
+          <input type="range" id="volatility-slider" min="0" max="100" value="50" class="neon-slider">
+
+          <div
+            style="display: flex; justify-content: space-between; margin-top: 8px; font-size: 0.75rem; color: var(--text-muted);">
+            <span>Stable</span>
+            <span>Flash Crash</span>
+          </div>
+        </div>
 
         <div style="text-align: center; margin-top: 32px; color: var(--text-muted); font-size: 0.9rem;">
           <i data-lucide="info" style="width: 14px; height: 14px; vertical-align: middle; margin-right: 4px;"></i>
@@ -1552,7 +1791,11 @@
     </div>
   </footer>
 
-  <script>lucide.createIcons();</script>
+  <script>
+    lucide.createIcons();
+  </script>
+  <script src="scripts/live-pnl.js"></script>
+  <script src="scripts/crash-simulator.js"></script>
 </body>
 
 </html>
